CNSDEVCOLECT/force-app/main/default/objects/CS_IntegracionesAndes__c/CS_IntegracionesAndes__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Configuración de integración con Servicios Andes.</description>
    <label>CS IntegracionesAndes</label>
</CustomObject>