CNSDEVCOLECT/force-app/main/default/objects/CS_IntegracionesAndes__c/fields/AccessControlAllowOrigin__c.field-meta.xml
<CustomField>
    <fullName>AccessControlAllowOrigin__c</fullName>
    <description>&apos;Access-Control-Allow-Origin&apos;,&apos;*&apos;</description>
    <label>AccessControlAllowOrigin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>