CNSDEVCOLECT/force-app/main/default/objects/CS_IntegracionesAndes__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Permite validar si la custom setting está activa para los servicios.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>