CNSDEVCOLECT/force-app/main/default/objects/CS_IntegracionesAndes__c/fields/Cache_Control__c.field-meta.xml
<CustomField>
    <fullName>Cache_Control__c</fullName>
    <description>&apos;Cache-Control&apos;,&apos;no-cache&apos;</description>
    <label>Cache-Control</label>
    <length>255</length>
    <type>Text</type>
</CustomField>