CNSDEVCOLECT/force-app/main/default/objects/CS_IntegracionesAndes__c/fields/ClientId__c.field-meta.xml
<CustomField>
    <fullName>ClientId__c</fullName>
    <description>Es el RUT eje: 22348803k</description>
    <label>ClientId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>