CNSDEVCOLECT/force-app/main/default/objects/CS_IntegracionesAndes__c/fields/CodigoAplicacion__c.field-meta.xml
<CustomField>
    <fullName>CodigoAplicacion__c</fullName>
    <description>116</description>
    <label>CodigoAplicacion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>