CNSDEVCOLECT/force-app/main/default/objects/CS_IntegracionesAndes__c/fields/CodigoCanal__c.field-meta.xml
<CustomField>
    <fullName>CodigoCanal__c</fullName>
    <description>2</description>
    <label>CodigoCanal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>