CNSDEVCOLECT/force-app/main/default/objects/CS_IntegracionesAndes__c/fields/EmpresaAplicacion__c.field-meta.xml
<CustomField>
    <fullName>EmpresaAplicacion__c</fullName>
    <description>Interno</description>
    <label>EmpresaAplicacion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>