CNSDEVCOLECT/force-app/main/default/objects/CS_IntegracionesAndes__c/fields/IpCliente__c.field-meta.xml
<CustomField>
    <fullName>IpCliente__c</fullName>
    <description>127.0.0.1</description>
    <label>IpCliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>