CNSDEVCOLECT/force-app/main/default/objects/CS_IntegracionesAndes__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <description>POST GET PATCH PUT DELETE</description>
    <label>Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>