CNSDEVCOLECT/force-app/main/default/objects/CS_IntegracionesAndes__c/fields/Modalidad__c.field-meta.xml
<CustomField>
    <fullName>Modalidad__c</fullName>
    <description>generar</description>
    <label>Modalidad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>