CNSDEVCOLECT/force-app/main/default/objects/CS_IntegracionesAndes__c/fields/NameCredential__c.field-meta.xml
<CustomField>
    <fullName>NameCredential__c</fullName>
    <label>NameCredential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>