CNSDEVCOLECT/force-app/main/default/objects/CS_IntegracionesAndes__c/fields/Parameters__c.field-meta.xml
<CustomField>
    <fullName>Parameters__c</fullName>
    <description>Agregar parámetros separados por comas &quot;,&quot; y escribir lógica en apex.</description>
    <label>Parameters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>