CNSDEVCOLECT/force-app/main/default/objects/CS_IntegracionesAndes__c/fields/URLApi__c.field-meta.xml
<CustomField>
    <fullName>URLApi__c</fullName>
    <description>Dominio URL del servicio</description>
    <label>URLApi</label>
    <type>Url</type>
</CustomField>